--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
-  collection: 1.17.2
+  collection: ^1.18.0
   equatable: 2.0.5
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
